--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:theme="@style/Theme.SupraControl"
         tools:targetApi="31">
         <activity
+            android:name=".ScreensActivity2"
+            android:exported="false"
+            android:label="@string/title_activity_screens2" />
+        <activity
             android:name=".MenuActivity"
             android:exported="false"
             android:label="@string/title_activity_settings" />
