--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.SupraControl"
         tools:targetApi="31">
         <activity
+            android:name=".ProductsAddActivity"
+            android:exported="false" />
+        <activity
             android:name=".ScreensActivity"
             android:exported="false"
             android:label="@string/title_activity_screens2" />
