--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,12 @@
         tools:targetApi="31">
         <activity
             android:name=".ProductsListActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Lista de Productos"/>
         <activity
             android:name=".ProductsAddActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Añadir Productos"/>
         <activity
             android:name=".ScreensActivity"
             android:exported="false"
